Fixed overflow issue from sr-only class. Fixed error-message wrap issue.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -47,6 +47,11 @@ body {
   min-height: 100vh;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 a {
   cursor: pointer;
   text-decoration: none;
@@ -59,12 +64,16 @@ a {
 
 // Screen reader styles 
 .sr-only {
+  border: 0;
   clip-path: inset(100%);
   clip: rect(1px, 1px, 1px, 1px);
   height: 1px;
+  margin: -1px;
   overflow: hidden;
+  padding: 0;
   position: absolute;
   white-space: nowrap;
+  width: 1px;
 }
 
 .not-visible {
