--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,6 +11,7 @@
   align-items: center;
   margin-bottom: 2.5rem;
   padding-top: 3.125rem;
+  width: 100%;
 
   @media #{$brkpoint-md} {
     margin-bottom: 5rem;
