--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,11 @@ body {
   min-height: 100vh;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 a {
   cursor: pointer;
   text-decoration: none;
@@ -50,12 +55,16 @@ a:focus {
 }
 
 .sr-only {
+  border: 0;
   clip-path: inset(100%);
   clip: rect(1px, 1px, 1px, 1px);
   height: 1px;
+  margin: -1px;
   overflow: hidden;
+  padding: 0;
   position: absolute;
   white-space: nowrap;
+  width: 1px;
 }
 
 .not-visible {
@@ -103,7 +112,9 @@ a:focus {
   background-color: hsl(0, 0%, 100%);
   box-shadow: 0px 32px 43px rgba(79, 166, 175, 0.200735);
   max-width: 57.5rem;
+  min-width: 17.5rem;
   padding: 0 1.5rem 2rem 1.5rem;
+  width: 100%;
 }
 @media (min-width: 57.5rem) {
   .form {
@@ -148,6 +159,10 @@ a:focus {
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 6px;
+}
+.bill__total span:first-child,
+.number__people span:first-child {
+  align-self: flex-start;
 }
 .bill__total .form__error-message,
 .number__people .form__error-message {
@@ -379,6 +394,7 @@ input[type=number] {
   align-items: center;
   margin-bottom: 2.5rem;
   padding-top: 3.125rem;
+  width: 100%;
 }
 @media (min-width: 57.5rem) {
   .main-header {
